# homomorphic-encryption-project

./: .gitignore  Cargo.toml  README.md  perftest.sh  questions.tex  res.sh  run.sh
benches/: benchmark.rs
report/: main.tex  preamble.sty  refs.bib
report/code-snippets/: param-search.py
report/sections/: Abstract.tex  Acknowledgments.tex  Benchmarking.tex  CircuitPrivacy.tex  Conclusion.tex  Evaluation.tex  Implementation.tex  ImplementationIntro.tex  ImplementationTesting.tex  Introduction.tex  LiteratureIntroduction.tex  MPCImplementation.tex  MPCTheory.aux  MPCTheory.out  MPCTheory.tex  PKCImplementation.tex  QuotientRingImpl.tex  RingLwePKSystem.tex  listings-rust.sty
report/sections/code-snippets/: 1024-degree-params.rs  estimator.sage  param-searach.py
sagemath/: example.sage
src/: encryption.rs  example.sage  lib.rs  main.rs  mpc.rs  poly.rs  prob.rs  protocol.rs  quotient_ring.rs
src/mpc/: commitment.rs  mod.rs  online.rs  prep.rs  zk.rs
