[package]
name = "homomorphic-encryption-project"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
probability = "0.18.0"
rug = { version = "1.15", features = ["serde"] }
sha2 = "0.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
